--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" >
   <meta charset="utf-8">
-  <title>Pixel Art Maker</title>
+  <title>Pixel Art Maker  - Clone Pull Request</title>
   <link rel="icon" type="image/png" href="img/batman.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
